# pybayes_ts

./: .gitignore  README.md  pyproject.toml
bayests/: LikelihoodTransform.py  SplineTrend.py  TimeSeriesTree.py  __init__.py  fitting_models.py  fourier_seasonality.py  likelihood_transform.py  radial_basis_seasonality.py  spline_trend.py  time_series_tree.py  trend_functions.py  utils.py
