[tool.poetry]
name = "BayesTS"
version = "0.1.0"
description = ""
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.13"
jaxlib = "^0.4.13"
numpyro = "^0.12.1"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
